--- a/config.env
+++ b/config.env
@@ -3,5 +3,6 @@ NEXT_PUBLIC_BASE_URL=replace-me
 SUPPORT_EMAIL=replace-me
 SMTP_HOST=replace-me
 SMTP_PORT=replace-me
+SMTP_SECURE=false
 SMTP_USER=replace-me
 SMTP_PWD=replace-me
