--- a/config.env
+++ b/config.env
@@ -1,8 +1,40 @@
-SECRET_PASSWORD=replace-me
-NEXT_PUBLIC_BASE_URL=replace-me
-SUPPORT_EMAIL=replace-me
-SMTP_HOST=replace-me
-SMTP_PORT=replace-me
+# REQUIRED CONFIG
+
+# A random 32-character secret key used to encrypt user sessions
+SECRET_PASSWORD=
+# The base url where this instance is accessible, including the scheme.
+# Example: https://example.com
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# EMAIL CONFIG (required for sending emails)
+
+# All outgoing emails will show this email as the sender's email address, which also serves as the support email.
+SUPPORT_EMAIL=
+# The host address of your SMTP server
+SMTP_HOST=localhost
+# The port of your SMTP server
+SMTP_PORT=25
+# Set to "true" if SSL is enabled for your SMTP connection
 SMTP_SECURE=false
-SMTP_USER=replace-me
-SMTP_PWD=replace-me
+# The username (if auth is enabled on your SMTP server)
+SMTP_USER=
+# The password (if auth is enabled on your SMTP server)
+SMTP_PWD=
+
+# OPTIONAL CONFIG
+
+# Set to `true` to require authentication for creating new polls and accessing admin pages
+AUTH_REQUIRED=false
+# Comma separated list of email addresses that are allowed to register and login.
+# You can use wildcard syntax to match a range of email addresses.
+# Example: "john@example.com,jane@example.com" or "*@example.com"
+ALLOWED_EMAILS=
+# Whether or not to disable the landing page
+DISABLE_LANDING_PAGE=false
+
+# ADVANCED CONFIG
+
+# If you are using the docker compose file this will be set automatically.
+# Only set this if you want to use an external database.
+# DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+
