--- a/config.env
+++ b/config.env
@@ -20,6 +20,8 @@ SMTP_SECURE=false
 SMTP_USER=
 # The password (if auth is enabled on your SMTP server)
 SMTP_PWD=
+# Set to "true" to enable TLS. Might be needed for some SMTP connections
+SMTP_TLS_ENABLED=false
 
 # OPTIONAL CONFIG
 
