🔧 Comment NO_REPLY email out by default

--- a/config.env
+++ b/config.env
@@ -20,7 +20,7 @@ ALLOWED_EMAILS=
 # EMAIL CONFIG (required for sending emails)
 
 # The email address that will be used to send emails. If not set, SUPPORT_EMAIL will be used instead.
-NOREPLY_EMAIL=
+# NOREPLY_EMAIL=
 
 # The email of whoever is managing this instance in case a user needs support.
 SUPPORT_EMAIL=
